--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     </header>
     <main>
       <nav>
-          <a class="link-nav" href=""><b>
+          <a class="link-nav" href="index.html"><b>
            главная </b> </a>
 
-        <a class="link-nav" href=""><b>
+        <a class="link-nav" href="index1.html"><b>
             об авторе </b> </a>
 
         <a class="link-nav" href=""> <b>
