--- a/index1.html
+++ b/index1.html
@@ -11,16 +11,16 @@
     </header>
     <main>
       <nav>
-          <a class="link-nav" href=""><b>
+          <a class="link-nav" href="index.html"><b>
            главная </b> </a>
 
-        <a class="link-nav" href=""><b>
+        <a class="link-nav" href="index1.html"><b>
             об авторе </b> </a>
 
-        <a class="link-nav" href=""> <b>
+        <a class="link-nav" href="index2.html"> <b>
             примеры работ</b> </a>
 
-        <a class="link-nav" href=""><b>
+        <a class="link-nav" href="index3.html"><b>
             полезная информация </b></a>
 
       </nav>
