--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Татьяна</title>
     <link rel="stylesheet" href="style.css"/>
+    <meta name="google-site-verification" content="aQKgNYoF81DGy3xX51uq_hTJgze0DcUKgRy4dlBujJ8" />
   </head>
   <body>
     <header>
